<resources>
    <string name="app_name">SimFocus</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_image_warning">no-image</string>
    <string name="chats_ui">CHAT ROOM</string>
    <string name="group_ui">GROUPS</string>
    <string name="contact_name">Simform</string>
    <string name="chat_message">Hello How are you</string>
    <string name="time">9:41</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_image">Image Loading</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="appMoto">Very own Social Media App of Simform</string>
    <string name="logoText">App Logo</string>
    <string name="fNameText">First Name</string>
    <string name="lNameText">Last Name</string>
    <string name="emailText">Email</string>
    <string name="departmentText">Select Department</string>
    <array name="departmentArray">
        <item>Mobile Development</item>
        <item>React Native</item>
        <item>Flutter</item>
        <item>Python</item>
        <item>DevOps</item>
        <item>HR</item>
        <item>UI/UX</item>
        <item>Open Source</item>
        <item>QA</item>
    </array>

    <string name="jobTittleText">Job Title</string>
    <array name="jobTitlesArray">
        <item>Trainee</item>
        <item>Employee</item>
        <item>Senior Software Engineer</item>
        <item>Senior Developer</item>
        <item>Junior Developer</item>
    </array>
    <string name="genderText">Gender</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="signUpText">SIGN UP</string>
    <string name="have_account">Already have account? Sign In</string>
    <string name="name">Name</string>
    <string name="message">Your Caption goes here</string>
    <string name="dont_have_account">Do not have an Account? Sign UP</string>
    <string name="emailSuffix">\@simformsolutions.com</string>
    <string name="emptyUsernameError">Email should not be empty.</string>
    <string name="invalidPasswordError">Please Enter valid Password</string>
    <string name="invalidUsernameError">Email valid email.</string>
    <string name="password_length">Password must be greater than 8 character</string>
    <string name="ivalidUsername">Invalid Username</string>
    <string name="enterFirstNAme">Enter First Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="departmentError">Department Must be Selected</string>
    <string name="jobTitleError">JobTitle Must be Selected</string>
    <string name="log_out">Log Out</string>
    <string name="temp_username">shubham.vyas</string>
    <string name="temp_name">Shubham Vyas</string>
    <string name="temp_job">Trainee - Mobile Development</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_comment">Add Comment</string>
    <string name="caption">Enter Caption </string>
    <string name="post">Post Now</string>
</resources>