<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentnavigation"
    app:startDestination="@id/navigationHome">
    <fragment
        android:id="@+id/navigationHome"
        android:name="com.codebury.simfocus.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigationChat"
        android:name="com.codebury.simfocus.fragments.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigationSearch"
        android:name="com.codebury.simfocus.fragments.SearchFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigationProfile"
        android:name="com.codebury.simfocus.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>