<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".authentication.AuthSignUpScreen">

    <View
        android:id="@+id/blankViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@color/simform_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/signUpCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_60sdp"
                android:elevation="@dimen/_5sdp"
                app:cardBackgroundColor="@color/topBgColor"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/signUpText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/specialTextColor"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImageView"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_20sdp"
                        android:src="@drawable/default_avatar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tvFirstName"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:hint="@string/fNameText"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:startIconDrawable="@drawable/ic_person"
                            app:startIconTint="@color/simform_500">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etFirstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/specialTextColor" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tvLastName"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:hint="@string/lNameText"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/tvFirstName"
                            app:layout_constraintTop_toTopOf="parent"
                            app:startIconDrawable="@drawable/ic_person"
                            app:startIconTint="@color/simform_500">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etLastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/specialTextColor" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:hint="@string/emailText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvFirstName"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/ic_email"
                        app:startIconTint="@color/simform_500">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/specialTextColor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvDepartment"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:hint="@string/departmentText"
                        app:endIconTint="@color/simform_500"
                        app:startIconDrawable="@drawable/ic_department"
                        app:startIconTint="@color/simform_500">

                        <AutoCompleteTextView
                            android:id="@+id/etDepartment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvJobTitle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:hint="@string/jobTittleText"
                        app:endIconTint="@color/simform_500"
                        app:startIconDrawable="@drawable/ic_job"
                        app:startIconTint="@color/simform_500">

                        <AutoCompleteTextView
                            android:id="@+id/etJobTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/genderRg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:checkedButton="@+id/radio_button_1"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/genderText"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/maleRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/maleText" />

                        <RadioButton
                            android:id="@+id/femaleRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/femaleText" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/signUpBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/signUpText" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:text="@string/have_account"
                android:textColor="@color/specialTextColor"
                android:textSize="@dimen/_12ssp"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpCardView" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>