<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <View
        android:id="@+id/blankViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@color/simform_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/signUpCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_60sdp"
                android:elevation="@dimen/_5sdp"
                app:cardBackgroundColor="@color/topBgColor"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/temp_username"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/specialTextColor"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp"
                        android:weightSum="2">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="96dp"
                            android:layout_height="124dp"
                            android:src="@drawable/default_avatar"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="2dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_5sdp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/_5sdp"
                                android:padding="@dimen/_5sdp"
                                android:text="@string/username"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/ic_person" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/_5sdp"
                                android:padding="@dimen/_5sdp"
                                android:text="@string/temp_name"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/ic_department" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/_10sdp"
                                android:padding="@dimen/_5sdp"
                                android:text="@string/temp_job"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/ic_job" />

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:text="@string/edit_profile" />

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/log_out" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profileRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:clipToPadding="true"
                    android:paddingVertical="@dimen/_30sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/all_post_design" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>